@@ -8,7 +8,7 @@ module Gateway
   interface Object_Factory
   {
     Object create_object (in string interface_repository_id,
-			  in Object gatewayed_object);
+                          in Object gatewayed_object);
   };
 
 };
